# palautusrepositorio

./: .gitignore  README.md  pyproject.toml
Viikko1/nhl-statistics/: pyproject.toml
Viikko1/nhl-statistics/src/: index.py  statistics_service.py
Viikko1/nhl-statistics/src/tests/: statistics_service_test.py
Viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
Viikko2/nhl-reader/src/: index.py  player.py
Viikko2/poetry-web/: pyproject.toml
Viikko3/hello-robot/: log.html  output.xml  report.html
Viikko3/login/: log.html  output.xml  report.html
Viikko3/login/src/services/: user_service.py
Viikko3/login/src/tests/: login.robot  register.robot  resource.robot
Viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
Viikko4/verkkokauppa/src/tests/: kauppa_test.py
Viikko5/: review.md  vibe.md
Viikko5/tennis/src/: tennis_game.py
Viikko6/laskin/src/: kayttoliittyma.py
Viikko6/query-language/src/: index.py  matchers.py
